--- a/html/find_id_pw.html
+++ b/html/find_id_pw.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/find_id_pw.css" />
-    <title>아이디/비밀번호 찾기</title>
+    <title>손에 손 잡고</title>
   </head>
   <body>
     <hr />
@@ -17,7 +17,7 @@
     </div>
     <hr />
     <div class="bottom_findID_header">
-      <a href="./home_logout.html">
+      <a href="./index.html">
         <img src="../img/logo.png" />
       </a>
       <div class="find_container">
