--- a/html/find_id_result.html
+++ b/html/find_id_result.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/find_id_result.css" />
-    <title>아이디 찾기 결과</title>
+    <title>손에 손 잡고</title>
   </head>
   <body>
     <hr />
@@ -17,7 +17,7 @@
     </div>
     <hr />
     <div class="bottom_find_id_result_header">
-      <a href="./home_logout.html"><img src="../img/logo.png" /></a>
+      <a href="./index.html"><img src="../img/logo.png" /></a>
     </div>
     <div class="wrap_find_id_result_content">
       <div class="email_box"></div>
