--- a/html/index.html
+++ b/html/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../css/home_logout.css" />
-    <title>메인페이지(로그인x)</title>
+    <link rel="stylesheet" href="../css/index.css" />
+    <title>손에 손 잡고</title>
   </head>
   <body>
     <div class="home_header">
-      <a href="#">손에, 손잡고</a>
+      <a href="#">손에 손 잡고</a>
       <img src="../img/logo.png" alt="logo" />
     </div>
     <div class="bottom_home_header">
@@ -31,5 +31,5 @@
     </div>
   </body>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="../js/home_logout.js"></script>
+  <script src="../js/index.js"></script>
 </html>
