--- a/html/login.html
+++ b/html/login.html
@@ -10,17 +10,17 @@
       content="604551010190-le65f4l8v56l9emnmfb3cntcqnnctc5a.apps.googleusercontent.com"
     /> -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
-    <title>로그인</title>
+    <title>손에 손 잡고</title>
   </head>
   <body>
     <div class="login_header">
-      <a href="./home_logout.html">
+      <a href="./index.html">
         <img src="../img/logo.png" />
       </a>
       <p>로그인</p>
     </div>
 
-    <a href="./home_logout.html" id="bottom_header">
+    <a href="./index.html" id="bottom_header">
       <img src="../img/arrow.png" />
     </a>
     <div class="wrap_login_content">
