--- a/html/mail_check.html
+++ b/html/mail_check.html
@@ -1,31 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/mail_check.css" />
     <title>이메일 인증 확인</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <hr />
     <div class="find_id_result_header">
-        <p>이메일 확인</p>
+      <p>이메일 확인</p>
     </div>
     <hr />
     <div class="bottom_find_id_result_header">
-        <a href="./home_logout.html"><img src="../img/mail_check.png" /></a>
+      <a href="./index.html"><img src="../img/mail_check.png" /></a>
     </div>
     <div class="wrap_find_id_result_content">
-        <div class="email_box">
-            <p>계정 확인 링크가 전송되었습니다.</p>
-            <p>이메일을 확인해주세요.</p>
-        </div>
-        <a href="./login.html">
-            <button id="find_id_result_login_button">로그인하기</button>
-        </a>
+      <div class="email_box">
+        <p>계정 확인 링크가 전송되었습니다.</p>
+        <p>이메일을 확인해주세요.</p>
+      </div>
+      <a href="./login.html">
+        <button id="find_id_result_login_button">로그인하기</button>
+      </a>
     </div>
-</body>
-
+  </body>
 </html>
