--- a/html/mail_checked.html
+++ b/html/mail_checked.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/mail_checked.css" />
-    <title>이메일 인증 완료</title>
+    <title>손에 손 잡고</title>
   </head>
   <body>
     <hr />
@@ -13,7 +13,7 @@
     </div>
     <hr />
     <div class="bottom_find_id_result_header">
-      <a href="./home_logout.html"><img src="../img/mail_checked.png" /></a>
+      <a href="./index.html"><img src="../img/mail_checked.png" /></a>
     </div>
     <div class="wrap_find_id_result_content">
       <div class="email_box">계정이 안전하게 확인되었습니다.</div>
