--- a/html/signup.html
+++ b/html/signup.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/signup.css" />
-    <title>회원가입</title>
+    <title>손에 손 잡고</title>
   </head>
   <body>
     <hr />
@@ -17,7 +17,7 @@
     </div>
     <hr />
     <div class="bottom_signup_header">
-      <a href="./home_logout.html"><img src="../img/logo.png" /></a>
+      <a href="./index.html"><img src="../img/logo.png" /></a>
     </div>
     <div class="wrap_signup_content">
         <div class="signup_content">
