--- a/html/home_login.html
+++ b/html/home_login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/home_login.css" />
-    <title>메인페이지(로그인o)</title>
+    <title>손에 손 잡고</title>
   </head>
   <body>
     <div class="nav_bar">
