--- a/html/my_post.html
+++ b/html/my_post.html
@@ -1,55 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/my_post.css" />
     <title>내가 쓴 게시물</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <nav class="nav_bar">
-        <div class="back_btn">
-            <a href="./home_login.html"><img src="../img/arrow.png" alt="" /></a>
-        </div>
-        <div class="logo_btn">
-            <a href="./home_login.html"><img src="../img/logo_2.png" alt="" class="logo_img" /></a>
-        </div>
-        <div class="nav_menu">
-            <ul>
-                <li class="post_li">
-                    내가 쓴 게시물
-                </li>
-                <li class="opacity_li">
-                    도움 해결하
-                </li>
-            </ul>
-        </div>
-        <div class="nav_chat">
-            <a href="../html/chat.html"><button class="chat_btn">채팅하기</button></a>
-        </div>
-        <div class="nav_logout">
-            <img src="../img/logout.png" alt="" />
-            <a href="./home_logout.html">로그아웃</a>
-        </div>
-        <div class="nav_mypage">
-            <img src="../img/mypage.png" alt="" />
-            <a href="../html/mypage.html">마이페이지</a>
-        </div>
+      <div class="back_btn">
+        <a href="./home_login.html"><img src="../img/arrow.png" alt="" /></a>
+      </div>
+      <div class="logo_btn">
+        <a href="./home_login.html"
+          ><img src="../img/logo_2.png" alt="" class="logo_img"
+        /></a>
+      </div>
+      <div class="nav_menu">
+        <ul>
+          <li class="post_li">내가 쓴 게시물</li>
+          <li class="opacity_li">도움 해결하</li>
+        </ul>
+      </div>
+      <div class="nav_chat">
+        <a href="../html/chat.html"
+          ><button class="chat_btn">채팅하기</button></a
+        >
+      </div>
+      <div class="nav_logout">
+        <img src="../img/logout.png" alt="" />
+        <a href="./index.html">로그아웃</a>
+      </div>
+      <div class="nav_mypage">
+        <img src="../img/mypage.png" alt="" />
+        <a href="../html/mypage.html">마이페이지</a>
+      </div>
     </nav>
     <hr />
 
     <section class="container">
-        <div class="wrap_post">
-
-        </div>
-        <div class="wrap_num">
-        </div>
+      <div class="wrap_post"></div>
+      <div class="wrap_num"></div>
     </section>
 
     <script src="https://code.jquery.com/jquery-3.4.1.js"></script>
     <script src="../js/my_post.js"></script>
-</body>
-
+  </body>
 </html>
