--- a/html/pw_reset.html
+++ b/html/pw_reset.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/pw_reset.css" />
-    <title>비밀번호 재설정</title>
+    <title>손에 손 잡고</title>
   </head>
   <body>
     <hr />
