--- a/html/request_list.html
+++ b/html/request_list.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/request_list.css" />
-    <title>도움 요청페이지 목록</title>
+    <title>손에 손 잡고</title>
   </head>
   <body>
     <nav class="nav_bar">
