--- a/html/solve_self.html
+++ b/html/solve_self.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="../css/solve_self.css" />
-    <title>도움 해결페이지(본인)</title>
+    <title>손에 손 잡고</title>
   </head>
   <body>
     <nav class="nav_bar">
@@ -31,7 +31,7 @@
       </div>
       <div class="nav_logout">
         <img src="../img/logout.png" alt="" />
-        <a href="./home_logout.html">로그아웃</a>
+        <a href="./index.html">로그아웃</a>
       </div>
       <div class="nav_mypage">
         <img src="../img/mypage.png" alt="" />
